--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 		<link rel="stylesheet" href="css/normalize.css" />
 		<link rel="stylesheet" href="css/screen.css" />
+
+		<link rel="stylesheet" href="https://use.typekit.net/omh4itr.css" />
 	</head>
 	<body></body>
 </html>
