Made tags in html + with of header in css

--- a/index.html
+++ b/index.html
@@ -12,5 +12,35 @@
 
 		<link rel="stylesheet" href="https://use.typekit.net/omh4itr.css" />
 	</head>
-	<body></body>
+	<body>
+		<div class="c-app u-max-width-lg">
+			<div class="c-app__header">
+				<h1 class="c-brand">Crypto</h1>
+			</div>
+			<div class="c-app__main">
+				<div class="c-main__top">
+					<div class="c-main__left">
+						<div class="c-item">
+							<h1 class="c-item__title"></h1>
+							<div class="c-item__text"></div>
+						</div>
+					</div>
+					<div class="c-main__right">
+						<div class="c-item">
+							<h1 class="c-item__title"></h1>
+							<div class="c-item__text"></div>
+						</div>
+					</div>
+				</div>
+				<div class="c-main__center">
+					<div class="c-item">
+						<h1 class="c-item__title"></h1>
+						<div class="c-item__text"></div>
+					</div>
+				</div>
+				<div class="c-main__register"></div>
+				<div class="c-main__footer"></div>
+			</div>
+		</div>
+	</body>
 </html>
