Made items of top & trying out grid

--- a/index.html
+++ b/index.html
@@ -13,33 +13,47 @@
 		<link rel="stylesheet" href="https://use.typekit.net/omh4itr.css" />
 	</head>
 	<body>
-		<div class="c-app u-max-width-lg">
+		<div class="c-app">
 			<div class="c-app__header">
-				<h1 class="c-brand">Crypto</h1>
+				<div class="c-app__container u-max-width-lg">
+					<div class="c-brand">Crypto</div>
+				</div>
 			</div>
 			<div class="c-app__main">
-				<div class="c-main__top">
-					<div class="c-main__left">
+				<div class="c-app__container u-max-width-lg">
+					<div class="c-main__top">
+						<div class="c-main__left c-main__item">
+							<div class="c-item">
+								<h1 class="c-item__title">
+									Crypto, The easy way of trading
+								</h1>
+								<div class="c-item__text">
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptas natus ullam dolorem architecto reiciendis, impedit, autem harum fuga iusto inventore soluta. Accusamus ut, voluptatum vero harum ipsa modi recusandae?
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="c-main__right c-main__item">
+							<div class="c-item">
+								<h1 class="c-item__title">
+									Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore est at consequuntur autem fugit quam neque iure nisi culpa quibusdam, hic ipsam saepe recusandae inventore harum itaque exercitationem iste libero.
+								</h1>
+								<div class="c-item__text">
+									<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, rerum vero doloremque laboriosam neque possimus officiis ducimus! Rem tempore exercitationem, velit enim error a nisi. Fugiat consequuntur suscipit adipisci architecto?</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="c-main__center">
 						<div class="c-item">
 							<h1 class="c-item__title"></h1>
 							<div class="c-item__text"></div>
 						</div>
 					</div>
-					<div class="c-main__right">
-						<div class="c-item">
-							<h1 class="c-item__title"></h1>
-							<div class="c-item__text"></div>
-						</div>
-					</div>
+					<div class="c-main__register"></div>
+					<div class="c-main__footer"></div>
 				</div>
-				<div class="c-main__center">
-					<div class="c-item">
-						<h1 class="c-item__title"></h1>
-						<div class="c-item__text"></div>
-					</div>
-				</div>
-				<div class="c-main__register"></div>
-				<div class="c-main__footer"></div>
 			</div>
 		</div>
 	</body>
