Grid works with lorem ipsum

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 			</div>
 			<div class="c-app__main">
 				<div class="c-app__container u-max-width-lg">
-					<div class="c-main__top">
-						<div class="c-main__left c-main__item">
+					<div class="c-main__top c-app__grid o-row">
+						<div class="c-main__left c-main__item u-x-span-3-bp3">
 							<div class="c-item">
 								<h1 class="c-item__title">
 									Crypto, The easy way of trading
@@ -34,10 +34,10 @@
 								</div>
 							</div>
 						</div>
-						<div class="c-main__right c-main__item">
+						<div class="c-main__right c-main__item u-x-span-3-bp3">
 							<div class="c-item">
 								<h1 class="c-item__title">
-									Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore est at consequuntur autem fugit quam neque iure nisi culpa quibusdam, hic ipsam saepe recusandae inventore harum itaque exercitationem iste libero.
+									Lorem ipsum dolor, sit amet consectetur adipisicing elit.
 								</h1>
 								<div class="c-item__text">
 									<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, rerum vero doloremque laboriosam neque possimus officiis ducimus! Rem tempore exercitationem, velit enim error a nisi. Fugiat consequuntur suscipit adipisci architecto?</p>
