Made changes to text & deleted shadow

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 	<body>
 		<div class="c-app">
 			<div class="c-app__header">
-				<div class="c-app__container u-max-width-lg">
+				<div class="c-app__container o-container">
 					<div class="c-brand">Crypto</div>
 				</div>
 			</div>
 			<div class="c-app__main">
-				<div class="c-app__container u-max-width-lg">
+				<div class="c-app__container o-container">
 					<div class="c-main__top c-app__grid o-row">
 						<div class="c-main__left c-main__item u-x-span-3-bp3">
 							<div class="c-item">
@@ -28,19 +28,14 @@
 									Crypto, The easy way of trading
 								</h1>
 								<div class="c-item__text">
-									<p>
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptas natus ullam dolorem architecto reiciendis, impedit, autem harum fuga iusto inventore soluta. Accusamus ut, voluptatum vero harum ipsa modi recusandae?
-									</p>
+									<p><span>Crypto</span> is a free, financial platform where you can see all the stocks of every crytocurrency. All this is possible by using the coinbase API. The goal of <span>Crypto </span> is to make trading easy and understandable for everyone.</p>
 								</div>
 							</div>
 						</div>
 						<div class="c-main__right c-main__item u-x-span-3-bp3">
 							<div class="c-item">
-								<h1 class="c-item__title">
-									Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-								</h1>
-								<div class="c-item__text">
-									<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, rerum vero doloremque laboriosam neque possimus officiis ducimus! Rem tempore exercitationem, velit enim error a nisi. Fugiat consequuntur suscipit adipisci architecto?</p>
+								<div class="c-item__image">
+									<img src="" alt="The app" />
 								</div>
 							</div>
 						</div>
