--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/screen.css" />
 
     <link rel="stylesheet" href="https://use.typekit.net/omh4itr.css" />
+    <script src="js/app.js"></script>
 </head>
 
 <body>
@@ -280,7 +281,13 @@
                             <div class="c-item">
                                 <div class="c-item__form">
                                     <form action="#" method="post" class="c-form">
-                                        <input type="email" class="c-form__mail">
+                                        <p class="c-form-field">
+                                            <label class="c-label c-label--floating js-floating-label" for="username">
+                                                Email
+                                            </label>
+                                            <input class="c-input c-input--with-floating-label js-floating-input" type="email" name="username" id="username"
+                                                required>
+                                        </p>
                                         <button type="submit">Register!</button>
                                     </form>
                                 </div>
