--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <div class="c-brand">Krypto</div>
             </div>
         </div>
+
         <div class="c-app__main">
             <div class="c-app__container o-container">
                 <div class="c-main__top c-app__grid o-row">
@@ -288,25 +289,29 @@
                                             <input class="c-input c-input--with-floating-label js-floating-input" type="email" name="username" id="username"
                                                 required>
                                         </p>
-                                        <button type="submit">Register!</button>
+                                        <button class="o-button-reset c-button js-sign-in-button" type="submit">Register</button>
                                     </form>
                                 </div>
                             </div>
                         </div>
                         <div class="c-main__right u-x-span-3-bp3">
                             <div class="c-item">
-                                    <div class="c-item__title">
-                                        <h1>Register!</h1>
-                                    </div>
-                                    <div class="c-item__text">
-                                        <p>Register now to get notified with more updates!</p>
-                                    </div>
+                                <div class="c-item__title">
+                                    <h1>Register!</h1>
                                 </div>
-                            
+                                <div class="c-item__text">
+                                    <p>Register now to get notified with more updates!</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="c-main__footer"></div>
+            </div>
+        </div>
+
+        <div class="c-app__footer">
+            <div class="c-app__container o-container">
+                
             </div>
         </div>
     </div>
