Added coming soon section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="c-main__center c-app__grid o-row">
-                    <div class="c-main__left u-x-span-3-bp3">
+                    <div class="c-main__left u-x-span-3-bp3 c-main__item">
                         <div class="c-item">
                             <div class="c-item__svg">
                                 <svg id="fc5c3225-7602-4bc9-83b7-60b4757d2e45" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="369" height="259" viewBox="0 0 1106 776">
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-main__right u-x-span-3-bp3">
+                    <div class="c-main__right u-x-span-3-bp3 c-main__item">
                         <div class="c-item">
                             <h1 class="c-item__title">What is Krypto?</h1>
                             <div class="c-item__text">
@@ -106,8 +106,8 @@
                     </div>
                 </div>
 
-                <div class="c_main_bottom c-app__grid o-row">
-                    <div class="c-main__left u-x-span-3-bp3">
+                <div class="c-main__bottom c-app__grid o-row">
+                    <div class="c-main__left u-x-span-3-bp3 c-main__item">
                         <div class="c-item">
                             <div class="c-item__title">
                                 <h1>Why use Krypto?</h1>
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="c-main__right u-x-span-3-bp3">
+                    <div class="c-main__right u-x-span-3-bp3 c-main__item">
                         <div class="c-item">
                             <div class="c-item__svg">
                                 <svg id="1a6977f7-86c5-489f-b4ea-e3d25c51345c" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="227" height="243" viewBox="0 0 682 729.04">
@@ -278,10 +278,10 @@
                     </div>
                 </div>
                 <div class="c-main__register c-app__grid o-row">
-                    <div class="c-main__left u-x-span-3-bp3">
+                    <div class="c-main__left u-x-span-3-bp3 c-main__item">
                             <div class="c-item">
                                 <div class="c-item__form">
-                                    <form action="#" method="post" class="c-form">
+                                    <form class="c-form">
                                         <p class="c-form-field">
                                             <label class="c-label c-label--floating js-floating-label" for="username">
                                                 Email
@@ -294,24 +294,30 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="c-main__right u-x-span-3-bp3">
+                        <div class="c-main__right u-x-span-3-bp3 c-main__item">
                             <div class="c-item">
                                 <div class="c-item__title">
                                     <h1>Register!</h1>
                                 </div>
                                 <div class="c-item__text">
-                                    <p>Register now to get notified with more updates!</p>
+                                    <p>Register now to get notified with more updates and when we will launch our app! We promise that we'll keep your email safe!</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div class="c-app__footer">
-            <div class="c-app__container o-container">
-                
+                <div class="c-main__footer c-app__grid o-row">
+                    <div class="c-footer__center u-x-span-6-bp3">
+                        <div class="c-item c-item__install">
+                            <div class="c-item__title c-item__title--center">
+                                <h1>Join us today!</h1>
+                            </div>
+                            <div class="c-item__image">
+                                <img class="c-image__soon" src="assets/images/coming-soon.png" alt="Coming soon on the App Store and Google Play">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
