Added bottom information

--- a/index.html
+++ b/index.html
@@ -318,6 +318,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="c-main__info c-app__grid o-row">
+                    <div class="c-info u-x-span-3-bp3">
+                            <div class="c-item c-item__info">
+                                <p class="c-info__text">Contact: <a href="mailto:anikat.arora@student.howest.be">anikat.arora@student.howest.be</a></p>
+                            </div>
+                    </div>
+                    <div class="c-info u-x-span-3-bp3">
+                        <div class="c-item c-item__info">
+                            <p class="c-info__text">Made by Aniket Arora</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
