Changed description of mainpage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Krypto</title>
-    <meta name="description" content="This is my HTML5 boilerplate." />
+    <meta name="description" content="Krypto, the easy way of trading!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="css/normalize.css" />
