Changed name of js file to index.js for indexpage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/screen.css" />
 
     <link rel="stylesheet" href="https://use.typekit.net/omh4itr.css" />
-    <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
 </head>
 
 <body>
