--- a/app.html
+++ b/app.html
@@ -14,5 +14,34 @@
 		<script src="js/app.js"></script>
 	</head>
 
-	<body></body>
+	<body>
+		<div class="c-app">
+			<div class="c-app__container o-container o-container__app">
+				<div class="c-app_header o-row">
+					<h1 class="c-header__main">
+						Cryptocurrencies
+					</h1>
+				</div>
+				<div class="c-app__top o-row">
+					<h2 class="c-header__title">
+						Top
+					</h2>
+				</div>
+				<div class="c-app__cards">
+					<div class="c-app__card">
+						<div class="c-card__title"></div>
+						<div class="c-card__price"></div>
+						<div class="c-card__graph"></div>
+					</div>
+				</div>
+				<div class="c-app__more">
+					<h2 class="c-header__title"></h2>
+				</div>
+				<div class="c-app__list">
+					<div class="c-list__title"></div>
+					<div class="c-list__price"></div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
