Changed font size of head title, changed size & color of email & button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="c-main__top c-app__grid o-row">
                     <div class="c-main__left c-main__item u-x-span-3-bp3">
                         <div class="c-item">
-                            <h1 class="c-item__title">
+                            <h1 class="c-item__title c-item__title--main">
                                 Krypto, The easy way of trading
                             </h1>
                         </div>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="c-main__register c-app__grid o-row">
                     <div class="c-main__left u-x-span-3-bp3 c-main__item">
-                            <div class="c-item">
+                            <div class="c-item c-item__formfield">
                                 <div class="c-item__form">
                                     <form class="c-form">
                                         <p class="c-form-field">
