--- a/app.html
+++ b/app.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/screen.css" />
 
 		<link rel="stylesheet" href="https://use.typekit.net/omh4itr.css" />
-		<script src="js/app.js"></script>
+		<script src="js/newapp.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js" integrity="sha256-vyehT44mCOPZg7SbqfOZ0HNYXjPKgBCaqxBkW3lh6bg=" crossorigin="anonymous"></script>
 	</head>
 
@@ -20,7 +20,7 @@
 			<div class="c-app__container o-container o-container__app">
 				<div class="c-app_header o-row">
 					<h1 class="c-header__main">
-						Cryptocurrencies
+						Crypto's
 					</h1>
 				</div>
 				<div class="c-app__top o-row">
@@ -28,8 +28,8 @@
 						Top
 					</h2>
 				</div>
-				<div class="c-app__cards o-row">
-					<div class="c-app__card js-card">
+				<div class="c-app__cards js-cards o-row">
+					<!-- <div class="c-app__card js-card">
 						<div class="c-card__title js-title"></div>
 						<div class="c-card__label--price">
 							<div class="c-card__price js-price"></div>
@@ -38,7 +38,7 @@
 						<div class="c-card__graph">
 							<canvas id="js-chart" width="240" height="260"></canvas>
 						</div>
-					</div>
+					</div> -->
 				</div>
 				<div class="c-app__more o-row">
 					<h2 class="c-header__title">
