--- a/app.html
+++ b/app.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/screen.css" />
 
 		<link rel="stylesheet" href="https://use.typekit.net/omh4itr.css" />
-		<script src="js/newapp.js"></script>
+		<script src="js/app.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js" integrity="sha256-vyehT44mCOPZg7SbqfOZ0HNYXjPKgBCaqxBkW3lh6bg=" crossorigin="anonymous"></script>
 	</head>
 
@@ -45,9 +45,8 @@
 						More
 					</h2>
 				</div>
-				<div class="c-app__list">
-					<div class="c-list__title"></div>
-					<div class="c-list__price"></div>
+				<div class="c-app__list js-list">
+
 				</div>
 			</div>
 		</div>
