--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="c-app">
+    <div class="c-app c-app__page">
         <div class="c-app__header">
             <div class="c-app__container o-container">
                 <div class="c-brand">Krypto</div>
