Made everything responsive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <div class="c-app c-app__page">
+    <div class="c-app">
         <div class="c-app__header">
             <div class="c-app__container o-container">
                 <div class="c-brand">Krypto</div>
@@ -33,7 +33,7 @@
 
         <div class="c-app__main">
             <div class="c-app__container o-container">
-                <div class="c-main__top c-app__grid o-row">
+                <div class="c-main__top c-app__grid o-row c-app__column">
                     <div class="c-main__left c-main__item u-x-span-3-bp3">
                         <div class="c-item">
                             <h1 class="c-item__title c-item__title--main">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
 
-                <div class="c-main__center c-app__grid o-row">
+                <div class="c-main__center c-app__grid o-row c-app__reverse">
                     <div class="c-main__left u-x-span-3-bp3 c-main__item">
                         <div class="c-item">
                             <div class="c-item__svg">
@@ -114,7 +114,7 @@
                     </div>
                 </div>
 
-                <div class="c-main__bottom c-app__grid o-row">
+                <div class="c-main__bottom c-app__grid o-row c-app__column">
                     <div class="c-main__left u-x-span-3-bp3 c-main__item">
                         <div class="c-item">
                             <div class="c-item__title">
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="c-main__register c-app__grid o-row">
+                <div class="c-main__register c-app__grid o-row c-app__reverse">
                     <div class="c-main__left u-x-span-3-bp3 c-main__item">
                             <div class="c-item c-item__formfield">
                                 <div class="c-item__form">
@@ -326,7 +326,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="c-main__info c-app__grid o-row">
+                <div class="c-main__info c-app__grid o-row c-app__column">
                     <div class="c-info u-x-span-3-bp3">
                             <div class="c-item c-item__info">
                                 <p class="c-info__text">Contact: <a href="mailto:anikat.arora@student.howest.be">anikat.arora@student.howest.be</a></p>
