Added counter to landingspage & microinteraction to app page

--- a/index.html
+++ b/index.html
@@ -318,10 +318,18 @@
                     <div class="c-footer__center u-x-span-6-bp3">
                         <div class="c-item c-item__install">
                             <div class="c-item__title c-item__title--center">
-                                <h1>Join us today!</h1>
+                                <h1>Time till launch</h1>
                             </div>
                             <div class="c-item__image">
-                                <img class="c-image__soon" src="assets/images/coming-soon.png" alt="Coming soon on the App Store and Google Play">
+                                <div class="c-item__timer js-timer">
+                                    <div class="c-timer c-timer__days js-days"></div>
+                                    <p class="c-timer">: </p>
+                                    <div class="c-timer c-timer__hours js-hours"></div>
+                                    <p class="c-timer">: </p>
+                                    <div class="c-timer c-timer__minutes js-minutes"></div>
+                                    <p class="c-timer">: </p>
+                                    <div class="c-timer c-timer__seconds js-seconds"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
